<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.logInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/backBtn"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/back"
            app:layout_constraintBottom_toTopOf="@+id/welcomeTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="230dp"
            android:text="@string/register"
            android:textColor="@color/Goldenrod"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:text="@string/registerTxt"
            android:textColor="@color/Goldenrod"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/welcomeTxt"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTxt" />

        <TextView
            android:id="@+id/userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="230dp"
            android:layout_marginBottom="400dp"
            android:text="@string/userId"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="480dp"
            android:background="@drawable/shape_capsule_edittext"
            android:ems="10"
            android:padding="8dp"
            android:drawableStart="@drawable/username"
            android:hint="@string/userName"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTxt" />

        <TextView
            android:id="@+id/userPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="450dp"
            android:text="@string/password"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/userId"
            app:layout_constraintTop_toBottomOf="@+id/userId" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="450dp"
            android:background="@drawable/shape_capsule_edittext"
            android:ems="10"
            android:padding="8dp"
            android:drawableStart="@drawable/password_bg"
            android:hint="@string/userpassword"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/etUsername"
            app:layout_constraintTop_toBottomOf="@+id/userId"
            app:layout_constraintVertical_bias="0.857" />

        <Button
            android:id="@+id/register"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="300dp"
            android:backgroundTint="@color/Goldenrod"
            android:text="@string/register"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>