<?xml version="1.0" encoding="utf-8"?>
<!-- activity_main.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 顶部店铺信息 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shop_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="350dp"
            android:background="@drawable/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/singleStorePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/CirecleImageView"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/storeTitle"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/singleStorePic"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/storeExtra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="extra"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/storeTitle"
            app:layout_constraintTop_toBottomOf="@+id/storeTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/WhiteSmoke"
        app:layout_constraintTop_toBottomOf="@+id/shop_header">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/WhiteSmoke"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/mainBtn1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/WhiteSmoke"
            android:textSize="20sp"
            android:textColor="@color/DarkGrey"
            android:layout_weight="1"
            android:text="@string/mainBtn2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:textColor="@color/DarkGrey"
            android:textSize="20sp"
            android:backgroundTint="@color/WhiteSmoke"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainBtn3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/DarkGrey"
            android:textSize="20sp"
            android:backgroundTint="@color/WhiteSmoke"
            android:layout_weight="1"
            android:text="@string/mainBtn4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_marginTop="250dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="0dp"
                android:layout_height="510dp"
                android:background="@color/WhiteSmoke"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:indeterminateTint="@color/Goldenrod"
                android:indeterminateTintMode="src_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/single"
                android:layout_width="0dp"
                android:layout_height="510dp"
                android:layout_weight="1"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar4"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:indeterminateTint="@color/Goldenrod"
                android:indeterminateTintMode="src_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageButton
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:padding="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/wm" />

        <Button
            android:id="@+id/payBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/Gold"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/allPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="30dp"
            android:text="到手约￥0"
            android:textColor="@color/Red"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/payBtn"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psf"
            android:textSize="12sp"
            android:textColor="@color/DarkGrey"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/allPrice"
            app:layout_constraintTop_toBottomOf="@+id/allPrice" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>