<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:background="@color/LightGrey">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mainbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/titlemain"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/white_bg"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="20"
                    android:background="@drawable/white_bg"
                    android:drawableStart="@drawable/search_icon"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:padding="7dp"
                    android:textColor="@color/DarkGrey"
                    android:textColorHint="@color/DarkGrey" />

                <Button
                    android:id="@+id/searchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Goldenrod"
                    android:text="@string/searchBtn"
                    android:textSize="12sp" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/store"
                    android:layout_width="410dp"
                    android:layout_height="740dp"
                    android:layout_marginTop="10dp"
                    android:clipToPadding="false"
                    android:paddingStart="1dp"
                    android:paddingEnd="1dp"
                    android:paddingBottom="90dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/Goldenrod"
                    android:indeterminateTintMode="src_in"
                    app:layout_constraintBottom_toBottomOf="@+id/store"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/store" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/guide"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mainPic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="50dp"
                        android:maxHeight="50dp"
                        app:srcCompat="@drawable/main1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/orderPic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="50dp"
                        android:maxHeight="50dp"
                        app:srcCompat="@drawable/btn_3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/minePic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="50dp"
                        android:maxHeight="50dp"
                        app:srcCompat="@drawable/mine1" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>